fix(home): z-index of CTA button

--- a/src/pages/home/HomePage.css
+++ b/src/pages/home/HomePage.css
@@ -301,7 +301,7 @@
 }
 
 .cta-section-grid-patch {
-  @apply absolute w-3/4;
+  @apply absolute w-3/4 z-10;
 }
 
 .cta-title {
@@ -313,7 +313,7 @@
 }
 
 .cta-section-buttons {
-  @apply w-full lg:w-1/2 px-2 sm:px-6 md:px-10 lg:px-24 flex space-x-3 lg:space-x-5 items-center justify-center;
+  @apply w-full lg:w-1/2 px-2 sm:px-6 md:px-10 lg:px-24 flex space-x-3 lg:space-x-5 items-center justify-center relative z-20;
 }
 .cta-section-button {
   @apply flex-1 whitespace-nowrap;
